data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1422.wast
;; 3. **Test Description**:     Test a `loop` with a `br_if` instruction branching back to the start of the loop if a condition is met. Use the operand stack to validate proper unwinding and check that the loop executes without errors.    - **Constraint Checked**: Correct handling of backward branching.    - **Stack Corruption Check**: Checks for proper restoration and stacking of operands on each iteration.

(assert_invalid
  (module
    (func $loop-br_if-unwind (param i32) (result i32)
      (local i32)
      (i32.const 0)
      (loop $loop
        (local.get 0)
        (call $check_condition)  ;; assume check_condition returns an i32
        (br_if $loop)
        (local.set 1)
      )
      (local.get 1)
    )
  )
  "type mismatch"
)